--- a/src/example-Deep_learning_models.ipynb
+++ b/src/example-Deep_learning_models.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 400/400 [00:19<00:00, 20.96it/s]\n"
+      "100%|██████████| 400/400 [00:23<00:00, 17.02it/s]\n"
      ]
     },
     {
@@ -104,188 +104,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Predicts</th>\n",
-       "      <th>Actual</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2022-03-18</th>\n",
-       "      <td>180.74</td>\n",
-       "      <td>270.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-03-19</th>\n",
-       "      <td>177.56</td>\n",
-       "      <td>315.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-03-20</th>\n",
-       "      <td>180.93</td>\n",
-       "      <td>364.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-03-21</th>\n",
-       "      <td>178.63</td>\n",
-       "      <td>347.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-03-22</th>\n",
-       "      <td>180.03</td>\n",
-       "      <td>312.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-03-23</th>\n",
-       "      <td>179.21</td>\n",
-       "      <td>274.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-03-24</th>\n",
-       "      <td>179.68</td>\n",
-       "      <td>237.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-03-25</th>\n",
-       "      <td>179.41</td>\n",
-       "      <td>278.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-03-26</th>\n",
-       "      <td>179.57</td>\n",
-       "      <td>284.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-03-27</th>\n",
-       "      <td>179.48</td>\n",
-       "      <td>277.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-03-28</th>\n",
-       "      <td>179.53</td>\n",
-       "      <td>317.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-03-29</th>\n",
-       "      <td>179.50</td>\n",
-       "      <td>313.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-03-30</th>\n",
-       "      <td>179.52</td>\n",
-       "      <td>318.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-03-31</th>\n",
-       "      <td>179.51</td>\n",
-       "      <td>374.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-04-01</th>\n",
-       "      <td>179.51</td>\n",
-       "      <td>413.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-04-02</th>\n",
-       "      <td>179.51</td>\n",
-       "      <td>405.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-04-03</th>\n",
-       "      <td>179.51</td>\n",
-       "      <td>355.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-04-04</th>\n",
-       "      <td>179.51</td>\n",
-       "      <td>306.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-04-05</th>\n",
-       "      <td>179.51</td>\n",
-       "      <td>271.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-04-06</th>\n",
-       "      <td>179.51</td>\n",
-       "      <td>306.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-04-07</th>\n",
-       "      <td>179.51</td>\n",
-       "      <td>315.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-04-08</th>\n",
-       "      <td>179.51</td>\n",
-       "      <td>301.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-04-09</th>\n",
-       "      <td>179.51</td>\n",
-       "      <td>356.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-04-10</th>\n",
-       "      <td>179.51</td>\n",
-       "      <td>348.00</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            Predicts  Actual\n",
-       "2022-03-18    180.74  270.00\n",
-       "2022-03-19    177.56  315.00\n",
-       "2022-03-20    180.93  364.00\n",
-       "2022-03-21    178.63  347.00\n",
-       "2022-03-22    180.03  312.00\n",
-       "2022-03-23    179.21  274.00\n",
-       "2022-03-24    179.68  237.00\n",
-       "2022-03-25    179.41  278.00\n",
-       "2022-03-26    179.57  284.00\n",
-       "2022-03-27    179.48  277.00\n",
-       "2022-03-28    179.53  317.00\n",
-       "2022-03-29    179.50  313.00\n",
-       "2022-03-30    179.52  318.00\n",
-       "2022-03-31    179.51  374.00\n",
-       "2022-04-01    179.51  413.00\n",
-       "2022-04-02    179.51  405.00\n",
-       "2022-04-03    179.51  355.00\n",
-       "2022-04-04    179.51  306.00\n",
-       "2022-04-05    179.51  271.00\n",
-       "2022-04-06    179.51  306.00\n",
-       "2022-04-07    179.51  315.00\n",
-       "2022-04-08    179.51  301.00\n",
-       "2022-04-09    179.51  356.00\n",
-       "2022-04-10    179.51  348.00"
-      ]
+      "text/plain": "            Predicts  Actual\n2022-05-01    228.23  360.00\n2022-05-02    228.23  342.00\n2022-05-03    228.23  406.00\n2022-05-04    228.23  396.00\n2022-05-05    228.23  420.00\n2022-05-06    228.23  472.00\n2022-05-07    228.23  548.00\n2022-05-08    228.23  559.00\n2022-05-09    228.23  463.00\n2022-05-10    228.23  407.00\n2022-05-11    228.23  362.00\n2022-05-12    228.23  405.00\n2022-05-13    228.23  417.00\n2022-05-14    228.23  391.00\n2022-05-15    228.23  419.00\n2022-05-16    228.23  461.00\n2022-05-17    228.23  472.00\n2022-05-18    228.23  535.00\n2022-05-19    228.23  622.00\n2022-05-20    228.23  606.00\n2022-05-21    228.23  508.00\n2022-05-22    228.23  461.00\n2022-05-23    228.23  390.00\n2022-05-24    228.23  432.00",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Predicts</th>\n      <th>Actual</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2022-05-01</th>\n      <td>228.23</td>\n      <td>360.00</td>\n    </tr>\n    <tr>\n      <th>2022-05-02</th>\n      <td>228.23</td>\n      <td>342.00</td>\n    </tr>\n    <tr>\n      <th>2022-05-03</th>\n      <td>228.23</td>\n      <td>406.00</td>\n    </tr>\n    <tr>\n      <th>2022-05-04</th>\n      <td>228.23</td>\n      <td>396.00</td>\n    </tr>\n    <tr>\n      <th>2022-05-05</th>\n      <td>228.23</td>\n      <td>420.00</td>\n    </tr>\n    <tr>\n      <th>2022-05-06</th>\n      <td>228.23</td>\n      <td>472.00</td>\n    </tr>\n    <tr>\n      <th>2022-05-07</th>\n      <td>228.23</td>\n      <td>548.00</td>\n    </tr>\n    <tr>\n      <th>2022-05-08</th>\n      <td>228.23</td>\n      <td>559.00</td>\n    </tr>\n    <tr>\n      <th>2022-05-09</th>\n      <td>228.23</td>\n      <td>463.00</td>\n    </tr>\n    <tr>\n      <th>2022-05-10</th>\n      <td>228.23</td>\n      <td>407.00</td>\n    </tr>\n    <tr>\n      <th>2022-05-11</th>\n      <td>228.23</td>\n      <td>362.00</td>\n    </tr>\n    <tr>\n      <th>2022-05-12</th>\n      <td>228.23</td>\n      <td>405.00</td>\n    </tr>\n    <tr>\n      <th>2022-05-13</th>\n      <td>228.23</td>\n      <td>417.00</td>\n    </tr>\n    <tr>\n      <th>2022-05-14</th>\n      <td>228.23</td>\n      <td>391.00</td>\n    </tr>\n    <tr>\n      <th>2022-05-15</th>\n      <td>228.23</td>\n      <td>419.00</td>\n    </tr>\n    <tr>\n      <th>2022-05-16</th>\n      <td>228.23</td>\n      <td>461.00</td>\n    </tr>\n    <tr>\n      <th>2022-05-17</th>\n      <td>228.23</td>\n      <td>472.00</td>\n    </tr>\n    <tr>\n      <th>2022-05-18</th>\n      <td>228.23</td>\n      <td>535.00</td>\n    </tr>\n    <tr>\n      <th>2022-05-19</th>\n      <td>228.23</td>\n      <td>622.00</td>\n    </tr>\n    <tr>\n      <th>2022-05-20</th>\n      <td>228.23</td>\n      <td>606.00</td>\n    </tr>\n    <tr>\n      <th>2022-05-21</th>\n      <td>228.23</td>\n      <td>508.00</td>\n    </tr>\n    <tr>\n      <th>2022-05-22</th>\n      <td>228.23</td>\n      <td>461.00</td>\n    </tr>\n    <tr>\n      <th>2022-05-23</th>\n      <td>228.23</td>\n      <td>390.00</td>\n    </tr>\n    <tr>\n      <th>2022-05-24</th>\n      <td>228.23</td>\n      <td>432.00</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,18 +123,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "{'mean_absolute_percentage_error': 42.710182475767674,\n",
-       " 'mean_absolute_error': 139.4839616322146,\n",
-       " 'mean_squared_error': 21310.64119349639}"
-      ]
+      "text/plain": "{'mean_absolute_percentage_error': 48.24388951405902,\n 'mean_absolute_error': 224.02137889193878,\n 'mean_squared_error': 55762.26570064559}"
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,6 +138,15 @@
    "source": [
     "evaluate"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
