--- a/src/examples-Statistical_models.ipynb
+++ b/src/examples-Statistical_models.ipynb
@@ -2,11 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-01-09 10:28:58.021212: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    }
+   ],
    "source": [
     "from perlib.forecaster import *\n",
     "from perlib.datasets import *\n",
@@ -18,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "data.columns = [\"Values\"]"
@@ -29,14 +38,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "outputs": [
     {
      "data": {
       "text/plain": "             Values\n2022-01-01 15136.00\n2022-01-02 16733.00\n2022-01-03 20016.00\n2022-01-04 17708.00\n2022-01-05 18019.00\n...             ...\n2022-06-21 26323.00\n2022-06-22 23779.00\n2022-06-23 27549.00\n2022-06-24 29660.00\n2022-06-25 23356.00\n\n[176 rows x 1 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Values</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2022-01-01</th>\n      <td>15136.00</td>\n    </tr>\n    <tr>\n      <th>2022-01-02</th>\n      <td>16733.00</td>\n    </tr>\n    <tr>\n      <th>2022-01-03</th>\n      <td>20016.00</td>\n    </tr>\n    <tr>\n      <th>2022-01-04</th>\n      <td>17708.00</td>\n    </tr>\n    <tr>\n      <th>2022-01-05</th>\n      <td>18019.00</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>2022-06-21</th>\n      <td>26323.00</td>\n    </tr>\n    <tr>\n      <th>2022-06-22</th>\n      <td>23779.00</td>\n    </tr>\n    <tr>\n      <th>2022-06-23</th>\n      <td>27549.00</td>\n    </tr>\n    <tr>\n      <th>2022-06-24</th>\n      <td>29660.00</td>\n    </tr>\n    <tr>\n      <th>2022-06-25</th>\n      <td>23356.00</td>\n    </tr>\n  </tbody>\n</table>\n<p>176 rows × 1 columns</p>\n</div>"
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
