--- a/src/examples-Statistical_models.ipynb
+++ b/src/examples-Statistical_models.ipynb
@@ -11,7 +11,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-01-09 10:28:58.021212: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2\n",
+      "2023-01-11 19:47:51.027186: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
@@ -22,7 +22,7 @@
     "import pandas as pd\n",
     "dataset = load_wineind()\n",
     "data = pd.DataFrame(dataset)\n",
-    "data.index = pd.date_range(start=\"2022-01-01\",periods=len(data),freq=\"d\")"
+    "data.index = pd.date_range(start=\"2022-01-01\",periods=len(data),freq=\"h\")"
    ]
   },
   {
@@ -38,14 +38,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "outputs": [
     {
      "data": {
-      "text/plain": "             Values\n2022-01-01 15136.00\n2022-01-02 16733.00\n2022-01-03 20016.00\n2022-01-04 17708.00\n2022-01-05 18019.00\n...             ...\n2022-06-21 26323.00\n2022-06-22 23779.00\n2022-06-23 27549.00\n2022-06-24 29660.00\n2022-06-25 23356.00\n\n[176 rows x 1 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Values</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2022-01-01</th>\n      <td>15136.00</td>\n    </tr>\n    <tr>\n      <th>2022-01-02</th>\n      <td>16733.00</td>\n    </tr>\n    <tr>\n      <th>2022-01-03</th>\n      <td>20016.00</td>\n    </tr>\n    <tr>\n      <th>2022-01-04</th>\n      <td>17708.00</td>\n    </tr>\n    <tr>\n      <th>2022-01-05</th>\n      <td>18019.00</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>2022-06-21</th>\n      <td>26323.00</td>\n    </tr>\n    <tr>\n      <th>2022-06-22</th>\n      <td>23779.00</td>\n    </tr>\n    <tr>\n      <th>2022-06-23</th>\n      <td>27549.00</td>\n    </tr>\n    <tr>\n      <th>2022-06-24</th>\n      <td>29660.00</td>\n    </tr>\n    <tr>\n      <th>2022-06-25</th>\n      <td>23356.00</td>\n    </tr>\n  </tbody>\n</table>\n<p>176 rows × 1 columns</p>\n</div>"
+      "text/plain": "                      Values\n2022-01-01 00:00:00 15136.00\n2022-01-01 01:00:00 16733.00\n2022-01-01 02:00:00 20016.00\n2022-01-01 03:00:00 17708.00\n2022-01-01 04:00:00 18019.00\n...                      ...\n2022-01-08 03:00:00 26323.00\n2022-01-08 04:00:00 23779.00\n2022-01-08 05:00:00 27549.00\n2022-01-08 06:00:00 29660.00\n2022-01-08 07:00:00 23356.00\n\n[176 rows x 1 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Values</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2022-01-01 00:00:00</th>\n      <td>15136.00</td>\n    </tr>\n    <tr>\n      <th>2022-01-01 01:00:00</th>\n      <td>16733.00</td>\n    </tr>\n    <tr>\n      <th>2022-01-01 02:00:00</th>\n      <td>20016.00</td>\n    </tr>\n    <tr>\n      <th>2022-01-01 03:00:00</th>\n      <td>17708.00</td>\n    </tr>\n    <tr>\n      <th>2022-01-01 04:00:00</th>\n      <td>18019.00</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>2022-01-08 03:00:00</th>\n      <td>26323.00</td>\n    </tr>\n    <tr>\n      <th>2022-01-08 04:00:00</th>\n      <td>23779.00</td>\n    </tr>\n    <tr>\n      <th>2022-01-08 05:00:00</th>\n      <td>27549.00</td>\n    </tr>\n    <tr>\n      <th>2022-01-08 06:00:00</th>\n      <td>29660.00</td>\n    </tr>\n    <tr>\n      <th>2022-01-08 07:00:00</th>\n      <td>23356.00</td>\n    </tr>\n  </tbody>\n</table>\n<p>176 rows × 1 columns</p>\n</div>"
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,12 +59,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "from perlib.core.models.smodels import models as armodels\n",
     "aR_info.modelname = \"arima\"\n",
-    "aR_info.forcastingStartDate = \"2022-6-10\"\n",
+    "aR_info.forecastNumber = 7\n",
+    "aR_info.period = \"hourly\"\n",
+    "aR_info.forecastingStartDate = \"2022-01-08 01:00:00\"\n",
     "ar = armodels(aR_info)"
    ],
    "metadata": {
@@ -73,13 +84,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 400/400 [00:47<00:00,  8.35it/s]\n"
+      "100%|██████████| 400/400 [00:50<00:00,  7.86it/s]\n"
      ]
     }
    ],
@@ -94,11 +105,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "from perlib.core.tester import sTester\n",
-    "r = sTester(dataFrame=data,object=ar,path=\"Data-arima-2023-01-09-18-53-16.pkl\",metric=[\"mape\",\"mae\",\"mse\"])"
+    "r = sTester(dataFrame=data,object=ar,path=\"models/Data-arima-2023-01-11-19-49-05.pkl\",metric=[\"mape\",\"mae\",\"mse\"])"
    ],
    "metadata": {
     "collapsed": false
@@ -106,14 +117,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "outputs": [
     {
      "data": {
-      "text/plain": "            Predicts   Actual\n2022-06-26  22394.57 25156.00\n2022-06-27  27475.10 25650.00\n2022-06-28  27249.36 30923.00\n2022-06-29  21420.16 37240.00\n2022-06-30  22798.41 17466.00\n2022-07-01  27681.45 19463.00\n2022-07-02  27303.96 24352.00\n2022-07-03  21451.68 26805.00\n2022-07-04  22814.72 25236.00\n2022-07-05  27696.04 24735.00\n2022-07-06  27282.16 29356.00\n2022-07-07  21458.68 31234.00\n2022-07-08  22820.71 22724.00\n2022-07-09  27705.20 28496.00\n2022-07-10  27258.58 32857.00\n2022-07-11  21464.89 37198.00\n2022-07-12  22826.58 13652.00\n2022-07-13  27713.95 22784.00\n2022-07-14  27235.21 23565.00\n2022-07-15  21470.95 26323.00\n2022-07-16  22832.61 23779.00\n2022-07-17  27722.43 27549.00\n2022-07-18  27212.11 29660.00\n2022-07-19  21476.87 23356.00",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Predicts</th>\n      <th>Actual</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2022-06-26</th>\n      <td>22394.57</td>\n      <td>25156.00</td>\n    </tr>\n    <tr>\n      <th>2022-06-27</th>\n      <td>27475.10</td>\n      <td>25650.00</td>\n    </tr>\n    <tr>\n      <th>2022-06-28</th>\n      <td>27249.36</td>\n      <td>30923.00</td>\n    </tr>\n    <tr>\n      <th>2022-06-29</th>\n      <td>21420.16</td>\n      <td>37240.00</td>\n    </tr>\n    <tr>\n      <th>2022-06-30</th>\n      <td>22798.41</td>\n      <td>17466.00</td>\n    </tr>\n    <tr>\n      <th>2022-07-01</th>\n      <td>27681.45</td>\n      <td>19463.00</td>\n    </tr>\n    <tr>\n      <th>2022-07-02</th>\n      <td>27303.96</td>\n      <td>24352.00</td>\n    </tr>\n    <tr>\n      <th>2022-07-03</th>\n      <td>21451.68</td>\n      <td>26805.00</td>\n    </tr>\n    <tr>\n      <th>2022-07-04</th>\n      <td>22814.72</td>\n      <td>25236.00</td>\n    </tr>\n    <tr>\n      <th>2022-07-05</th>\n      <td>27696.04</td>\n      <td>24735.00</td>\n    </tr>\n    <tr>\n      <th>2022-07-06</th>\n      <td>27282.16</td>\n      <td>29356.00</td>\n    </tr>\n    <tr>\n      <th>2022-07-07</th>\n      <td>21458.68</td>\n      <td>31234.00</td>\n    </tr>\n    <tr>\n      <th>2022-07-08</th>\n      <td>22820.71</td>\n      <td>22724.00</td>\n    </tr>\n    <tr>\n      <th>2022-07-09</th>\n      <td>27705.20</td>\n      <td>28496.00</td>\n    </tr>\n    <tr>\n      <th>2022-07-10</th>\n      <td>27258.58</td>\n      <td>32857.00</td>\n    </tr>\n    <tr>\n      <th>2022-07-11</th>\n      <td>21464.89</td>\n      <td>37198.00</td>\n    </tr>\n    <tr>\n      <th>2022-07-12</th>\n      <td>22826.58</td>\n      <td>13652.00</td>\n    </tr>\n    <tr>\n      <th>2022-07-13</th>\n      <td>27713.95</td>\n      <td>22784.00</td>\n    </tr>\n    <tr>\n      <th>2022-07-14</th>\n      <td>27235.21</td>\n      <td>23565.00</td>\n    </tr>\n    <tr>\n      <th>2022-07-15</th>\n      <td>21470.95</td>\n      <td>26323.00</td>\n    </tr>\n    <tr>\n      <th>2022-07-16</th>\n      <td>22832.61</td>\n      <td>23779.00</td>\n    </tr>\n    <tr>\n      <th>2022-07-17</th>\n      <td>27722.43</td>\n      <td>27549.00</td>\n    </tr>\n    <tr>\n      <th>2022-07-18</th>\n      <td>27212.11</td>\n      <td>29660.00</td>\n    </tr>\n    <tr>\n      <th>2022-07-19</th>\n      <td>21476.87</td>\n      <td>23356.00</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "                     Predicts   Actual\n2022-01-08 02:00:00  22365.78 23565.00\n2022-01-08 03:00:00  27034.07 26323.00\n2022-01-08 04:00:00  21494.69 23779.00\n2022-01-08 05:00:00  22687.86 27549.00\n2022-01-08 06:00:00  28727.81 29660.00\n2022-01-08 07:00:00  27198.53 23356.00",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Predicts</th>\n      <th>Actual</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2022-01-08 02:00:00</th>\n      <td>22365.78</td>\n      <td>23565.00</td>\n    </tr>\n    <tr>\n      <th>2022-01-08 03:00:00</th>\n      <td>27034.07</td>\n      <td>26323.00</td>\n    </tr>\n    <tr>\n      <th>2022-01-08 04:00:00</th>\n      <td>21494.69</td>\n      <td>23779.00</td>\n    </tr>\n    <tr>\n      <th>2022-01-08 05:00:00</th>\n      <td>22687.86</td>\n      <td>27549.00</td>\n    </tr>\n    <tr>\n      <th>2022-01-08 06:00:00</th>\n      <td>28727.81</td>\n      <td>29660.00</td>\n    </tr>\n    <tr>\n      <th>2022-01-08 07:00:00</th>\n      <td>27198.53</td>\n      <td>23356.00</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,13 +138,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "outputs": [
     {
      "data": {
-      "text/plain": "{'mean_absolute_percentage_error': 18.48008157931872,\n 'mean_absolute_error': 4727.513063029154,\n 'mean_squared_error': 39916839.81909209}"
+      "text/plain": "{'mean_absolute_percentage_error': 9.106182791838012,\n 'mean_absolute_error': 2305.077206398791,\n 'mean_squared_error': 7737754.055168868}"
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
